A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5603] fixed already defined constant error when db is unavailable (Vedmak)
..F....... [ZBX-5720] fixed incorrect error when deleting internal host group (Vedmak)
A......... [ZBX-5643] fixed SQL error by adding permission check for triggers when adding nonexistent dependencies via API (Toms)
A......... [ZBX-5643] fixed circularity check for trigger addDependencies() in API (Toms)
..F....... [ZBX-5691] fixed error when creating graph if Oracle configured to use comma as decimal separator (Vedmak)
..F....... [ZBX-5671] fixed error when saving configuration in Administration -> General with Oracle backend (Vedmak)
A......... [ZBX-5693] fixed possibility to create graph with the same name as existing graph prototype within template (Toms)
A......... [ZBX-5698] fixed API response after "triggerprototype.create", now request returns "triggerids" after INSERT (Oleg)
A.F....... [ZBX-5648] fixed problems with "templateid" in API; added check for "templateid" in graphs, triggers, items, screens and template screens; fixed full clone; fixed screen forms; fixed messages in API (Oleg)
..F....... [ZBX-5679] fixed icon mapping icon preview in configuration form (Vedmak)
..F....... [ZBX-5137] fixed host/group dropdowns changing selected value on refresh after page actions (Vedmak)
..F....... [ZBX-5688] fixed trigger expression suffix support for graph triggers, only KMG were supported (Vedmak)
..F....... [ZBX-5665] fixed LLD created triggers not being deleted when related trigger prototype is deleted (Vedmak)
...G...... [ZBX-5661] fixed keys "vfs.dev.read" and "vfs.dev.write" with "ops" and "sps" parameters on Linux and FreeBSD (Andris)
...G...... [ZBX-5614] fixed agent compiling problem on OpenBSD 5.1 (Andris)